3.6.0/_sources/gallery/animation/index.rst.txt


.. _sphx_glr_gallery_animation:

.. _animation_examples:

.. _animation-examples-index:

Animation
=========



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example showcases:">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_animate_decay_thumb.gif
    :alt: Decay

  :ref:`sphx_glr_gallery_animation_animate_decay.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Decay</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use histogram&#x27;s .BarContainer to draw a bunch of rectangles for an animated histogram.">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_animated_histogram_thumb.gif
    :alt: Animated histogram

  :ref:`sphx_glr_gallery_animation_animated_histogram.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animated histogram</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generating an animation by calling ~.pyplot.pause between plotting commands.">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_animation_demo_thumb.png
    :alt: pyplot animation

  :ref:`sphx_glr_gallery_animation_animation_demo.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">pyplot animation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This animation displays the posterior estimate updates as it is refitted when new data arrives....">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_bayes_update_thumb.gif
    :alt: The Bayes update

  :ref:`sphx_glr_gallery_animation_bayes_update.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The Bayes update</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This animation illustrates the double pendulum problem.">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_double_pendulum_thumb.gif
    :alt: The double pendulum problem

  :ref:`sphx_glr_gallery_animation_double_pendulum.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">The double pendulum problem</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Animated image using a precomputed list of images">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_dynamic_image_thumb.gif
    :alt: Animated image using a precomputed list of images

  :ref:`sphx_glr_gallery_animation_dynamic_image.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animated image using a precomputed list of images</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use a MovieWriter directly to grab individual frames and write them to a file.  This avoids any...">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_frame_grabbing_sgskip_thumb.png
    :alt: Frame grabbing

  :ref:`sphx_glr_gallery_animation_frame_grabbing_sgskip.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Frame grabbing</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example showcases:">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_pause_resume_thumb.png
    :alt: Pausing and Resuming an Animation

  :ref:`sphx_glr_gallery_animation_pause_resume.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Pausing and Resuming an Animation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulates rain drops on a surface by animating the scale and opacity of 50 scatter points.">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_rain_thumb.gif
    :alt: Rain simulation

  :ref:`sphx_glr_gallery_animation_rain.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Rain simulation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Animated 3D random walk">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_random_walk_thumb.gif
    :alt: Animated 3D random walk

  :ref:`sphx_glr_gallery_animation_random_walk.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animated 3D random walk</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Animated line plot">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_simple_anim_thumb.gif
    :alt: Animated line plot

  :ref:`sphx_glr_gallery_animation_simple_anim.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Animated line plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Emulates an oscilloscope.">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_strip_chart_thumb.gif
    :alt: Oscilloscope

  :ref:`sphx_glr_gallery_animation_strip_chart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Oscilloscope</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Comparative path demonstration of frequency from a fake signal of a pulsar (mostly known becaus...">

.. only:: html

  .. image:: /gallery/animation/images/thumb/sphx_glr_unchained_thumb.gif
    :alt: MATPLOTLIB **UNCHAINED**

  :ref:`sphx_glr_gallery_animation_unchained.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MATPLOTLIB **UNCHAINED**</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/animation/animate_decay
   /gallery/animation/animated_histogram
   /gallery/animation/animation_demo
   /gallery/animation/bayes_update
   /gallery/animation/double_pendulum
   /gallery/animation/dynamic_image
   /gallery/animation/frame_grabbing_sgskip
   /gallery/animation/pause_resume
   /gallery/animation/rain
   /gallery/animation/random_walk
   /gallery/animation/simple_anim
   /gallery/animation/strip_chart
   /gallery/animation/unchained

